--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Cuenta.razor
@@ -8,18 +8,18 @@
 
 <style>
     .boton-pestañas {
-    color: var(--colorTexto);
-    background-color: var(--fondoOscuro);
-    border: 1px solid var(--fondoBotonPequeño);
-    width: 100%;
-    transition: transform .2s;
-    font-size: 17px;
-    padding: 15px 20px;
+        color: var(--colorTexto);
+        background-color: var(--fondoOscuro);
+        border: 1px solid var(--fondoBotonPequeño);
+        width: 100%;
+        transition: transform .2s;
+        font-size: 17px;
+        padding: 15px 20px;
     }
 
     .boton-pestañas:hover {
-    color: var(--colorTextoHover);
-    transform: scale(1.01);
+        color: var(--colorTextoHover);
+        transform: scale(1.01);
     }
 
     .grid-estructura {
@@ -156,6 +156,26 @@
 
                     <div style="margin-top: 5px; font-size: 14px;">
                         @Herramientas.Idiomas.BuscarTexto(idioma, "String12", "Account")
+                    </div>
+                </div>
+            </div>
+        </button>
+
+        <button @onclick="@(e => MostrarForo(e))" class="boton-pestañas">
+            <div style="display: flex; align-items: center; gap: 20px; text-align: left;">
+                <div style="max-width: 22px;">
+                    <svg class="svg-boton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                        <path d="M72 88a56 56 0 1 1 112 0A56 56 0 1 1 72 88zM64 245.7C54 256.9 48 271.8 48 288s6 31.1 16 42.3l0-84.7zm144.4-49.3C178.7 222.7 160 261.2 160 304c0 34.3 12 65.8 32 90.5l0 21.5c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32l0-26.8C26.2 371.2 0 332.7 0 288c0-61.9 50.1-112 112-112l32 0c24 0 46.2 7.5 64.4 20.3zM448 416l0-21.5c20-24.7 32-56.2 32-90.5c0-42.8-18.7-81.3-48.4-107.7C449.8 183.5 472 176 496 176l32 0c61.9 0 112 50.1 112 112c0 44.7-26.2 83.2-64 101.2l0 26.8c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32zm8-328a56 56 0 1 1 112 0A56 56 0 1 1 456 88zM576 245.7l0 84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM320 32a64 64 0 1 1 0 128 64 64 0 1 1 0-128zM240 304c0 16.2 6 31 16 42.3l0-84.7c-10 11.3-16 26.1-16 42.3zm144-42.3l0 84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM448 304c0 44.7-26.2 83.2-64 101.2l0 42.8c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32l0-42.8c-37.8-18-64-56.5-64-101.2c0-61.9 50.1-112 112-112l32 0c61.9 0 112 50.1 112 112z" />
+                    </svg>
+                </div>
+
+                <div>
+                    <div>
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String26", "Account")
+                    </div>
+
+                    <div style="margin-top: 5px; font-size: 14px;">
+                        @Herramientas.Idiomas.BuscarTexto(idioma, "String27", "Account")
                     </div>
                 </div>
             </div>
@@ -397,6 +417,11 @@
                     <Claves idioma="@idioma" />
                 }
 
+                @if (mostrarForo == true)
+                {
+                    <Foro idioma="@idioma" />
+                }
+
                 @if (mostrarNotificacionesCorreo == true)
                 {
                     <NotificacionesCorreo idioma="@idioma" />
@@ -476,6 +501,7 @@
         mostrarIdioma = false;
         mostrarPatreon = false;
         mostrarClaves = false;
+        mostrarForo = false;
 
         mostrarNotificacionesCorreo = false;
         mostrarNotificacionesPush = false;
@@ -547,6 +573,15 @@
         CerrarPestañas();
         enseñarPestaña = true;
         mostrarClaves = true;
+    }
+
+    private bool mostrarForo = false;
+
+    private void MostrarForo(MouseEventArgs e)
+    {
+        CerrarPestañas();
+        enseñarPestaña = true;
+        mostrarForo = true;
     }
 
     private bool mostrarNotificacionesCorreo = false;
