--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -277,9 +277,9 @@
         </div>
     </footer>
 
-    <script src="~/superjs.js" defer></script>
-
     <script src="_framework/blazor.server.js" autostart="false"></script>
+
+    <script async src="~/superjs.js"></script>
 
     <script>
         function delay(milliseconds) {
