--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Claves.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Claves.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
-@using Newtonsoft.Json
+@using System.Text.Json
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
 @inject UserManager<Usuario> UserManager
@@ -13,7 +13,7 @@
 
 		if (string.IsNullOrEmpty(usuario.Keys) == false)
 		{
-			List<BaseDatos.Usuarios.Clave>? claves = JsonConvert.DeserializeObject<List<BaseDatos.Usuarios.Clave>>(usuario.Keys);
+			List<BaseDatos.Usuarios.Clave>? claves = JsonSerializer.Deserialize<List<BaseDatos.Usuarios.Clave>>(usuario.Keys);
 
 			if (claves != null)
 			{
