--- a/pepeizqs deals web/Pages/Componentes/Cuenta/DatosPersonales.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/DatosPersonales.razor
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc
 @using Microsoft.JSInterop
 @using System.Text
-@using Newtonsoft.Json
+@using System.Text.Json
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
@@ -83,7 +83,7 @@
     {
         if (usuario != null)
         {
-            string contenido = JsonConvert.SerializeObject(usuario);
+            string contenido = JsonSerializer.Serialize(usuario);
 
             MemoryStream ficheroStream = new MemoryStream(Encoding.UTF8.GetBytes(contenido));
 
